force-app/main/default/objects/Account/fields/Aggregate_by_Payee__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_by_Payee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to automatically aggregate multiple payments in a batch into one single payment.</inlineHelpText>
    <label>Aggregate by Payee</label>
    <type>Checkbox</type>
</CustomField>