force-app/main/default/objects/Account/fields/Alternate_Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Payee_Name__c</fullName>
    <inlineHelpText>Used to denote alternate name on PDF statements and cash disbursements.</inlineHelpText>
    <label>Alternate Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>