force-app/main/default/objects/Account/fields/AS_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>AS_Pay_Type__c</fullName>
    <inlineHelpText>Vendor preferred payment type selected in Payment Services.</inlineHelpText>
    <label>Payment Services Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AS_Pay_Type</valueSetName>
    </valueSet>
</CustomField>