force-app/main/default/objects/Account/fields/Billing_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Billing_Discount_Percent__c</fullName>
    <inlineHelpText>Used to determine the discount off the Billing Total if payment is received within Billing Discount Days Due.</inlineHelpText>
    <label>Billing Discount %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>