force-app/main/default/objects/Account/fields/Credit_Card_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field denotes a credit card vendor. If checked this account will display in the credit card field filtered lookup on the expense object.</inlineHelpText>
    <label>Credit Card Vendor</label>
    <type>Checkbox</type>
</CustomField>