force-app/main/default/objects/Account/fields/Default_1099_Box__c.field-meta.xml
<CustomField>
    <fullName>Default_1099_Box__c</fullName>
    <inlineHelpText>Informational field used on 1099 reports and file export.</inlineHelpText>
    <label>Default 1099 Box</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Rents</fullName>
            </value>
            <value>
                <fullName>2. Royalties</fullName>
            </value>
            <value>
                <fullName>3. Other Income</fullName>
            </value>
            <value>
                <fullName>4. Federal Tax Withheld</fullName>
            </value>
            <value>
                <fullName>5. Fishing Boat Proceeds</fullName>
            </value>
            <value>
                <fullName>6. Medical Payments</fullName>
            </value>
            <value>
                <fullName>7. Nonemployee Compensation</fullName>
            </value>
            <value>
                <fullName>8. Substitute Payments</fullName>
            </value>
            <value>
                <fullName>10. Crop Insurance</fullName>
            </value>
            <value>
                <fullName>13. Golden Parachute</fullName>
            </value>
            <value>
                <fullName>14. Attorney Proceeds</fullName>
            </value>
            <value>
                <fullName>15a. Section 409A Deferrals</fullName>
            </value>
            <value>
                <fullName>15b. Section 409A Income</fullName>
            </value>
            <value>
                <fullName>16. State Tax Withheld</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>