force-app/main/default/objects/Account/fields/Default_Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If set by the user, this payment processor is set on the billing. If this field is blank, the system looks for the payment processor set on the billing&apos;s ledger. If this, too, is blank then the global default payment processor is set on the billing.</inlineHelpText>
    <label>Default Payment Processor</label>
    <referenceTo>Payment_Processor__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>