force-app/main/default/objects/Account/fields/Discount_Days_Due__c.field-meta.xml
<CustomField>
    <fullName>Discount_Days_Due__c</fullName>
    <inlineHelpText>Used to calculate payment due date for a prompt payment discount on an Payable.</inlineHelpText>
    <label>Payable Discount Days Due</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>