force-app/main/default/objects/Account/fields/File_Import_Match_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Import_Match_Name__c</fullName>
    <inlineHelpText>Used to match the vendor account to a specific record in the Bank Direct Connect and Bank Import.</inlineHelpText>
    <label>File Import Match Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>