force-app/main/default/objects/Account/fields/GL_Account_Variable_2__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
    <label>GL Variable 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Accounting_Variable__c.Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 2</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Accounting_Variable__c</referenceTo>
    <relationshipLabel>Accounts (GL Variable 2)</relationshipLabel>
    <relationshipName>AccountsGLAV2</relationshipName>
    <type>Lookup</type>
</CustomField>