force-app/main/default/objects/Account/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For use with AP Automation Payment Services. Check this box for any Individuals that are set up as an Account.</inlineHelpText>
    <label>Individual</label>
    <type>Checkbox</type>
</CustomField>