force-app/main/default/objects/Account/fields/Last_Statement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Sent__c</fullName>
    <inlineHelpText>Indicates when a statement was emailed either from the Account detail&apos;s Create Statement button or Account List View&apos;s Create Outstanding Statements button.</inlineHelpText>
    <label>Last Statement Sent</label>
    <type>Date</type>
</CustomField>