force-app/main/default/objects/Account/fields/Payment_Services_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Services_Enrollment_Status__c</fullName>
    <inlineHelpText>Indicates the status of the enrollment of the Vendor with Payment Services.</inlineHelpText>
    <label>Payment Services Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Not Accepting VC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>