force-app/main/default/objects/Account/fields/Payment_Services_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Services_Vendor_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Payment Service Vendor ID from the Payment Services database. This field is automatically populated when Payment Services is enabled.</inlineHelpText>
    <label>Payment Services Vendor ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>