force-app/main/default/objects/Account/fields/Stripe_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Id__c</fullName>
    <inlineHelpText>External identification tag of this customer record in Stripe.</inlineHelpText>
    <label>Stripe Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>