force-app/main/default/objects/Account/fields/Taxpayer_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_Identification_Number__c</fullName>
    <inlineHelpText>Information obtained from IRS Form W-9 submitted by your vendor. Change by selecting Update 1099 Info button.</inlineHelpText>
    <label>Taxpayer Identification Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>