force-app/main/default/objects/Account/validationRules/Account_Payable_Terms_Positive_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Payable_Terms_Positive_Value</fullName>
    <active>true</active>
    <description>The payable terms field must be a positive value.</description>
    <errorConditionFormula>Account_Payable_Terms__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Account_Payable_Terms__c</errorDisplayField>
    <errorMessage>The payable terms field must be a positive number.</errorMessage>
</ValidationRule>