force-app/main/default/objects/Account/validationRules/Discount_Days_Due_Positive_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Days_Due_Positive_Value</fullName>
    <active>true</active>
    <description>The discount days field must be a positive value.</description>
    <errorConditionFormula>Discount_Days_Due__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Discount_Days_Due__c</errorDisplayField>
    <errorMessage>The discount days due field must be a positive number.</errorMessage>
</ValidationRule>