force-app/main/default/objects/Account/validationRules/Discount_Percent_Positive_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Percent_Positive_Value</fullName>
    <active>true</active>
    <description>The discount percent field must be a positive value.</description>
    <errorConditionFormula>Discount_Percent__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Discount_Percent__c</errorDisplayField>
    <errorMessage>The discount % field must be a positive number.</errorMessage>
</ValidationRule>