force-app/main/default/objects/Account/validationRules/Payment_Services_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Services_Required_Fields</fullName>
    <active>false</active>
    <description>Payment Services Type, AP Remittance Email and Billing Address are required when Enable Payment Services is checked</description>
    <errorConditionFormula>AND(
 Enable_Payment_Services__c  == TRUE,
OR(
ISPICKVAL ( AS_Pay_Type__c , &quot;&quot;),
ISBLANK( AP_Remittance_Email__c ), 
ISBLANK(BillingAddress)
)
)</errorConditionFormula>
    <errorDisplayField>Enable_Payment_Services__c</errorDisplayField>
    <errorMessage>Payment Services Type, AP Remittance Email and Billing Address are required when Enable Payment Services is checked</errorMessage>
</ValidationRule>