force-app/main/default/objects/Account/listViews/Enrolled_in_Payment_Services.listView-meta.xml
<ListView>
    <fullName>Enrolled_in_Payment_Services</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>Payment_Services_Vendor_ID__c</columns>
    <columns>Enable_Payment_Services__c</columns>
    <columns>Payment_Services_Enrollment_Status__c</columns>
    <columns>Last_Payment_Services_Sync_Date__c</columns>
    <columns>AS_Pay_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Accounting_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Accounting_Type__c</field>
        <operation>equals</operation>
        <value>Vendor</value>
    </filters>
    <filters>
        <field>Accounting_Type__c</field>
        <operation>equals</operation>
        <value>Customer and Vendor</value>
    </filters>
    <filters>
        <field>Payment_Services_Enrollment_Status__c</field>
        <operation>equals</operation>
        <value>Enrolled</value>
    </filters>
    <label>Enrolled in Payment Services</label>
</ListView>