force-app/main/default/objects/Account/listViews/X1099.listView-meta.xml
<ListView>
    <fullName>X1099</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Accounting_Type__c</columns>
    <columns>Billing_Contact__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>X1099_Vendor__c</columns>
    <columns>Default_Form_1099_Box__c</columns>
    <columns>Statement_Needed__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>X1099_Vendor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>x1099 Vendors</label>
</ListView>